--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="WebStudio" content="Effective Solutions for Your Business" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">    <title>WebStudio</title>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -24,7 +24,7 @@
         </ul>
       </address>
     </header>
-    <>
+    
       <!--home page-->
       <section>
         <h1>Effective Solutions for Your Business</h1>
