--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="WebStudio" content="Effective Solutions for Your Business" />
+    <link rel="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"> 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header >
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a class="logo1" href="./index.html">Web<span class="logo2">Studio</span></a>
+        <ul class="menu-links">
+          <li><a class="studio" href="">Studio</a></li>
+          <li><a class="portfolio" href="">Portfolio</a></li>
+          <li><a class="contacts" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address >
+        <ul class="contacts-links">
+          <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -28,39 +30,39 @@
       <!--home page-->
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button class="start-scr-btn" type="button">Order Service</button>
       </section>
       <!--list of effective solutions-->
       <section>
         <h2>Effective Solutions for Your Business</h2>
-        <ul>
+        <ul class="eff-sol">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="solution">Strategy</h3>
+            <p class="text" >
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="solution">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="solution">Diligence</h3>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="solution">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -70,7 +72,7 @@
       <!--team member list-->
       <section>
         <h2>Our Team</h2>
-        <ul>
+        <ul class="team-list">
           <li>
             <img
               src="./images/mark_guerrero.jpg"
@@ -78,8 +80,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="name">Mark Guerrero</h3>
+            <p class="descr">Product Designer</p>
           </li>
 
           <li>
@@ -89,8 +91,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name">Tom Ford</h3>
+            <p class="descr">Frontend Developer</p>
           </li>
 
           <li>
@@ -100,8 +102,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="name">Camila Garcia</h3>
+            <p class="descr">Marketing</p>
           </li>
 
           <li>
@@ -111,8 +113,8 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="name">Daniel Wilson</h3>
+            <p class="descr">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -120,41 +122,41 @@
       <section>
 <h2>Our Portfolio</h2>
 
-<ul>
+<ul class="portfolio">
   <li>
     <img src="./images/banking_app.jpg" alt="any application tiles" width="360" height="300">
-    <h3>Banking App</h3>
-    <p>App</p>
+    <h3 class="name">Banking App</h3>
+    <p class="descr">App</p>
   </li>
 
   <li>
     <img src="./images/cashless_payment.jpg" alt="online payment" width="360" height="300">
-    <h3>Cashless Payment</h3>
-    <p>Marketing</p>
+    <h3 class="name">Cashless Payment</h3>
+    <p class="descr">Marketing</p>
   </li>
 
   <li>
     <img src="./images/meditation_app.jpg" alt="laptop" width="360" height="300">
-    <h3>Meditation App</h3>
-    <p>App</p>
+    <h3 class="name">Meditation App</h3>
+    <p class="descr">App</p>
   </li>
 
   <li>
     <img src="./images/taxi_service.jpg" alt="auto" width="360" height="300">
-    <h3>Taxi Service</h3>
-    <p>Marketing</p>
+    <h3 class="name">Taxi Service</h3>
+    <p class="descr">Marketing</p>
   </li>
 
   <li>
     <img src="./images/screen_illustrations.jpg" alt="smartphone" width="360" height="300">
-    <h3>Screen Illustrations</h3>
-    <p>Design</p>
+    <h3 class="name">Screen Illustrations</h3>
+    <p class="descr">Design</p>
   </li>
 
   <li>
     <img src="./images/online_courses.jpg" alt="girl" width="360" height="300">
-    <h3>Online Courses</h3>
-    <p>Marketing</p>
+    <h3 class="name">Online Courses</h3>
+    <p class="descr">Marketing</p>
   </li>
 
   </ul>
@@ -164,8 +166,8 @@
     </main>
 
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a class="logo1" href="./index.html">Web<span class="logo2">Studio</span></a>
+      <p class="fot-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
