--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="addr-fon">
         <ul class="cont-links">
           <li>
             <a class="link" href="mailto:info@devstudio.com"
@@ -44,12 +44,12 @@
     </header>
     <main>
       <!--home page-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
+      <section class="start-scr">
+        <h1 class="title">Effective Solutions for Your Business</h1>
         <button class="start-scr-btn" type="button">Order Service</button>
       </section>
       <!--list of effective solutions-->
-      <section>
+      <section class="business">
         <h2>Effective Solutions for Your Business</h2>
         <ul class="eff-sol">
           <li>
@@ -135,7 +135,7 @@
         </ul>
       </section>
       <!--Our Portfolio-->
-      <section>
+      <section class="portfolio">
         <h2>Our Portfolio</h2>
         <ul class="portfolio">
           <li>
