--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </section>
       <!--list of effective solutions-->
       <section class="business">
-        <h2>Effective Solutions for Your Business</h2>
+        <h2 class="second-title">Effective Solutions for Your Business</h2>
         <ul class="eff-sol">
           <li>
             <h3 class="solution">Strategy</h3>
@@ -87,7 +87,7 @@
       </section>
       <!--team member list-->
       <section class="sec-team">
-        <h2>Our Team</h2>
+        <h2 class="second-title">Our Team</h2>
         <ul class="team-list">
           <li class="fon-team">
             <img
@@ -136,7 +136,7 @@
       </section>
       <!--Our Portfolio-->
       <section class="portfolio">
-        <h2>Our Portfolio</h2>
+        <h2 class="second-title">Our Portfolio</h2>
         <ul class="portfolio">
           <li>
             <img
